# wasm-rs

./: Cargo.toml  README.md  build.sh  readme2.md
doc/: 05.md  06.md  07.md  08.md  09.md  WebAssembly指令表.md  part-1.md  part-2.md  text_format.md
examples/: early_exit.rs  engine_universal.rs  exports_function.rs  exports_global.rs  exports_memory.rs  gcd.rs  handle_error.rs  hello_world.rs  hw.rs  imports_function.rs  imports_global.rs  instance.rs  limit_memory.rs  md5_sum.rs  memory.rs  table.rs  wat2wasm.rs
js-api/: CompileError.js  call-in-table.html  call-in-table.wat  fibonacci.html  fuel.wat  global.html  global.wat  index-compile.html  memory.html  memory.wat  print_hi.html  print_hi.wat  sample.html  shared-address-space.html  shared0.wat  shared1.wat  table.html  table.js  table.wat  table2.html  wasm_worker.js
src/: main.rs
wasi-rs/: .gitignore  Cargo.toml  README.md  demo.wat
wasi-rs/src/: main.rs
wat/: add_one.wat  block_add.wat  early_exit.wat  errors.wat  exports_function.wat  exports_global.wat  exports_memory.wat  fac.wat  gcd.wat  hello_world.wat  imports_function.wat  imports_global.wat  labels.wat  linking1.wat  linking2.wat  memory.wat  param.wat  table.wat  test.wat
