[package]
name = "wasm-rs"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wasmer = "2.0.0"
wasmer-engine-universal = "2.0.0"
wasmer-compiler-cranelift = "2.0.0"
anyhow = "1.0.43"
loupe = "0.1.3"
tokio = { version = "1", features = ["full"] }
walkdir = "2"
md5 = "0.7.0"